# jutul-agent-geothermal

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/commands/: review-fix.md  review-mine.md
.github/workflows/: ci.yml  deps-canary.yml  docs.yml  release.yml  simulators.yml
docs/: README.md  adding-a-simulator.md  agent-first.md  approval.md  architecture.md  benchmark-records.jsonl  benchmark.md  cli.md  configuration.md  context.md  development.md  evaluation.md  extending-for-your-application.md  filesystem.md  improving-the-agent.md  julia-kernel.md  lab.md  memory.md  models.md  review.md  server-interface.md  testing.md  trace.md  turns.md  usage.md  web-ui.md
docs/assets/: architecture.tex  render-architecture.sh
docs/stylesheets/: extra.css
examples/demo-app/: .gitignore  README.md  demo.py
examples/demo-app/DemoSim/: Project.toml
examples/demo-app/DemoSim/src/: DemoSim.jl
examples/demo-app/frontend/: app.js  index.html
examples/demo-app/julia_env/: Project.toml
examples/energy_demand_app/: README.md  backend_building_selection.py  era5_land_timeseries.py  frontend_building_selection.js  open_meteo_timeseries.py  serve.py
examples/energy_demand_app/julia/: simulation.jl
examples/geothermal-map/: capability.py  serve.py
examples/geothermal-viz-app/: .gitignore  capability.py  host-extension.js  serve.py
src/jutul_agent/: __init__.py  __main__.py  credentials.py  display.py  models.py  ollama_client.py  open_file.py  paths.py  recent_models.py  session.py  tool_labels.py  update_check.py  user_config.py  workspace.py
src/jutul_agent/agent/: added_dirs.py  approval.py  backend.py  builder.py  capabilities.py  context_editing.py  julia_plot.jl  julia_plot.py  memory.py  models.py  mounts.py  packages_backend.py  plot_julia.py  plot_julia_src.py  prompts.py  recovery.py  render_profile.py  summarization.py  titling.py  tool_output.py  tools.py  turns.py  windows_paths.py
src/jutul_agent/eval/: __init__.py  _gemini_compat.py  report.py  runconfig.py  scorers.py  solver.py
src/jutul_agent/eval/tasks/: __init__.py  api_discovery.py  battmo.py  calibration.py  canary.py  ensembles.py  filesystem.py  filesystem_source.py  fimbul.py  guardrails.py  jutuldarcy.py  mocca.py  plotting.py  search.py  search_source.py  usage.py
src/jutul_agent/eval/tasks/_corpus/: __init__.py
src/jutul_agent/interfaces/cli/: __init__.py  _helpers.py  doctor.py  eval.py  init.py  key.py  main.py  review.py  run.py  serve.py  sessions.py  simulator.py  skill.py  transcript.py  upgrade.py  web.py
src/jutul_agent/interfaces/server/: __init__.py  app.py  manager.py  protocol.py  session_host.py  web_overlay.py
src/jutul_agent/interfaces/server/web/: app.js  index.html  markdown.js  styles.css
src/jutul_agent/interfaces/server/web_dist/: index.html
src/jutul_agent/interfaces/server/webapp/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/jutul_agent/interfaces/tui/: __init__.py  _rendering.py  app.py  approval.py  approval_menu.py  assistant_filter.py  commands.py  context_panel.py  model_menu.py  prompt.py  tool_display.py  widgets.py
src/jutul_agent/julia/: requirements.py  session.py  threads.py
src/jutul_agent/julia/agentrepl_env/: Manifest.toml  Project.toml
src/jutul_agent/julia/backends/: __init__.py
src/jutul_agent/julia/backends/agentrepl/: __init__.py  backend.py  text.py
src/jutul_agent/julia_runtime/JutulAgent/: Project.toml
src/jutul_agent/julia_runtime/JutulAgent/src/: JutulAgent.jl  (+2 more)
src/jutul_agent/julia_runtime/web_overlay/: Project.toml
src/jutul_agent/juliakernel/: __init__.py  channels.py  config.py  connection.py  kernel.py  result.py  server.jl  text.py
src/jutul_agent/lab/: __init__.py  fakes.py  live.py  profile_startup.py  profile_turn.py  rasterize.py  scenarios.py  tui.py  web_ui.py
src/jutul_agent/review/: __init__.py  curate.py  dashboard.py  dashboard_template.html  discovery.py  eval_link.py  export.py  findings.py  issues.py  prompt.py  reviewer.py  server.py  settings.py
src/jutul_agent/simulators/: README.md  base.py  env_setup.py  registry.py  warmup.py
src/jutul_agent/simulators/battmo/: __init__.py  adapter.py
src/jutul_agent/simulators/fimbul/: __init__.py  adapter.py
src/jutul_agent/simulators/jutuldarcy/: __init__.py  adapter.py
src/jutul_agent/simulators/mocca/: __init__.py  adapter.py
src/jutul_agent/simulators/vocsim/: __init__.py  adapter.py
src/jutul_agent/trace/: __init__.py  log.py  messages.py  recorder.py
src/jutul_agent/transcript/: __init__.py  attempts.py  bundle.py  events.py  highlight.py  html.py  markdown.py  markdown_html.py  report.py
tests/: _tui.py  conftest.py  fakes.py  test_added_dirs.py  test_agentrepl_backend.py  test_approval.py  test_approval_menu.py  test_approval_mode.py  test_assistant_filter.py  test_attempt_tree.py  test_builder.py  test_capabilities.py  test_chat_app.py  test_chat_integration.py  test_cli_init.py  test_cli_key.py  test_cli_resume.py  test_cli_startup.py  test_cli_transcript.py  test_cli_upgrade.py  test_context_editing.py  test_context_panel.py  test_credentials.py  test_demo_app.py  test_display.py  test_doctor.py  test_doctor_plotting.py  test_end_to_end.py  test_env_setup.py  test_env_template_stamp.py  test_ephemeral_memory.py  test_eval_bench.py  test_eval_report.py  test_eval_scorers.py  test_geothermal_map.py  test_highlight.py  test_julia_requirements.py  test_julia_session.py  test_julia_streaming.py  test_julia_text.py  (+49 more)
tests/__snapshots__/: test_report_renderer.ambr  test_transcript.ambr  test_transcript_html.ambr
tests/integration/: test_julia_plot_integration.py
tests/live/: README.md  test_live_smoke.py
tests/snapshots/tui/: answer.txt  approval.txt  approval_resolved.txt  empty_answer.txt  long_output.txt  multi_turn.txt  narrow.txt  reasoning.txt  streaming.txt  tool_call.txt  tool_error.txt  unicode_output.txt  welcome.txt  wide_line.txt
(+120 files in other folders)
