[project]
name = "jutul-agent"
version = "0.0.0"
description = "Specialized scientific agent for AD-enabled simulators built on the Jutul framework."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Jakob Torben", email = "jakob.torben@sintef.no"},
]
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "deepagents>=0.6.8",
    "python-dotenv>=1.0",
    # Provider packages we bundle so the selected models work out of the box
    # (langchain-anthropic arrives via deepagents). ollama covers local models;
    # any other provider works once the user installs its langchain-* package.
    "langchain-openai>=0.2",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "markdown-it-py[linkify]>=4.0",
    "pygments>=2.17",
    "textual>=8.2.6",
    "pillow>=12.2.0",
]

[project.scripts]
jutul-agent = "jutul_agent.__main__:main"

[project.optional-dependencies]
eval = [
    # Validated against 0.3.238; <0.4 guards the framework's next breaking line.
    "inspect-ai>=0.3.238,<0.4",
    # Floors the agent bridge enforces on the patched client libraries.
    "openai>=2.40.0",
    "anthropic>=0.105.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "syrupy>=4",
]
docs = [
    "mkdocs-material>=9.7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jutul_agent"]

# Per-simulator folders carry julia_env/ templates (incl. each env's per-simulator
# JutulAgent<Sim> warm package) and skills/ markdown, plus the shared JutulAgent
# package under julia_runtime/ and the kernel's Julia server — none picked up by the
# default Python-only wheel build, so force-include them.
[tool.hatch.build.targets.wheel.force-include]
"src/jutul_agent/simulators" = "jutul_agent/simulators"
"src/jutul_agent/julia_runtime" = "jutul_agent/julia_runtime"
"src/jutul_agent/juliakernel/server.jl" = "jutul_agent/juliakernel/server.jl"

# Whitelist what ships in the source distribution. Keeps local development
# scratch directories at the repo root from ever leaking into a release.
[tool.hatch.build.targets.sdist]
include = [
    "src/jutul_agent",
    "tests",
    "docs",
    "pyproject.toml",
    "README.md",
    "AGENTS.md",
]

[tool.uv]
# Pin resolution to a snapshot date so the committed uv.lock is the canonical,
# reproducible result for the loose ranges above (CI installs it with
# `uv sync --locked`). To move forward: bump the date, run `uv lock`, run the
# tests, and commit the updated lock.
exclude-newer = "2026-06-09T00:00:00Z"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Global per-test timeout so a wedged test can't hang CI forever; sized to catch only
# infinite hangs, not slow work. conftest raises it for the compile-heavy integration
# tests.
addopts = "-ra --ignore=tests/live --timeout=120"
asyncio_mode = "auto"
markers = [
    "integration: requires a live Julia runtime (the kernel tests need only base Julia; the simulator/plot tests need an instantiated env)",
]
